# kuiper-forge

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  EphemeralVMPlan.md  README.md  cog.toml  dump-ngrok-requests.sh  mise.toml
.cog/: bump_version.sh  changelog-template.tera
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
agent-lib/: Cargo.toml
agent-lib/src/: certs.rs  connector.rs  error.rs  lib.rs
agent-proto/: Cargo.toml
agent-proto/proto/: agent.proto
coordinator/: Cargo.toml
coordinator/src/: agent_registry.rs  auth.rs  config.rs  fleet.rs  github.rs  main.rs  server.rs
docker/kuiper-forge/: .env.sample  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: CoordinatorPlan.md  ProxmoxProviderPlan.md  TartProviderPlan.md  actions-service-api-research.md  architecture.md  component-diagram.md  provisioning-flow.md
examples/: coordinator-config.toml  kuiper-proxmox-agent-config.toml  kuiper-tart-agent-config.toml  proxmox-agent-config.toml  tart-agent-config.toml  test-registration.sh
kuiper-agent-lib/: Cargo.toml
kuiper-agent-lib/scripts/: install_runner_unix.sh  install_runner_windows.ps1  run_runner_gui_macos.sh
kuiper-agent-lib/src/: bundle.rs  certs.rs  connector.rs  github_runner.rs  lib.rs  shell.rs
kuiper-agent-proto/: Cargo.toml  build.rs
kuiper-agent-proto/proto/: agent.proto  management.proto
kuiper-agent-proto/src/: lib.rs
kuiper-forge/: CHANGELOG.md  Cargo.toml
kuiper-forge/migrations/shared/: 20250123000000_initial_auth_schema.sql  20250124000000_add_active_runners.sql  20250125000000_add_pending_webhook_jobs.sql  20250201000000_add_pending_job_retry_count.sql  20250204000000_add_admin_users.sql  20250205000000_add_pending_job_repository.sql  20250206000000_add_runner_job_info.sql  20250206000001_add_pending_job_workflow_info.sql
kuiper-forge/src/: agent_registry.rs  auth.rs  config.rs  db.rs  fleet.rs  github.rs  lib.rs  main.rs  management.rs  pending_jobs.rs  runner_state.rs  server.rs  sql.rs  tls.rs  webhook.rs
kuiper-forge/src/admin/: auth.rs  middleware.rs  mod.rs  routes.rs  templates.rs
kuiper-forge/templates/admin/: agent_detail.html  dashboard.html  layout.html  login.html
kuiper-forge/tests/: grpc_mtls_test.rs
kuiper-proxmox-agent/: CHANGELOG.md  Cargo.toml
kuiper-proxmox-agent/src/: config.rs  error.rs  main.rs  ssh.rs  vm_manager.rs
kuiper-proxmox-api/: Cargo.toml
kuiper-proxmox-api/examples/: exec-vm.rs  list-vms.rs
kuiper-proxmox-api/src/: lib.rs
kuiper-tart-agent/: CHANGELOG.md  Cargo.toml
kuiper-tart-agent/src/: config.rs  error.rs  host_checks.rs  install.rs  main.rs  ssh.rs  vm_manager.rs
proxmox-agent/: Cargo.toml
proxmox-agent/src/: config.rs  error.rs  main.rs  vm_manager.rs
proxmox-api/: Cargo.toml
proxmox-api/examples/: exec-vm.rs  list-vms.rs
proxmox-api/src/: lib.rs
scripts/: build-proxmox-agent-musl.sh  dump-ngrok-requests.sh  replay-webhook.sh  tag-crate.sh
tart-agent/: Cargo.toml
tart-agent/src/: config.rs  error.rs  main.rs  ssh.rs  vm_manager.rs
tart-control/: Cargo.toml
tart-control/examples/: clone-vm.rs  ephemeral-vm.rs  exec-tart-vm.rs  list-tart-vms.rs  run-vm.rs
tart-control/src/: lib.rs  ssh_control.rs
vm-control/: Cargo.toml
vm-control/src/: lib.rs
