[workspace]
members = [
    "coordinator",
    "proxmox-api",
    "tart-control",
    "vm-control"
]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
