[workspace]
members = [
    "coordinator",
    "proxmox-api",
    "agent-proto",
    "agent-lib",
    "tart-agent",
    "proxmox-agent",
]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
prost = "0.14"
rcgen = { version = "0.13", features = ["pem"] }
rustls-pemfile = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
async-trait = "0.1"
rand = "0.8"
hex = "0.4"
