[package]
name = "kuiper-agent-lib"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for CI runner agents (connection, certificates)"

[dependencies]
kuiper-agent-proto = { version = "0.1.0", path = "../kuiper-agent-proto" }

tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

# For custom TLS configuration (insecure mode)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "tls12"] }
tower = "0.5"
http = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
