[package]
name = "kuiper-agent-lib"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for CI runner agents (connection, certificates)"

[dependencies]
kuiper-agent-proto = { version = "0.1.0", path = "../kuiper-agent-proto" }

tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
url = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }


[target.'cfg(unix)'.dependencies]
libc = "0.2"
