[package]
name = "kuiper-agent-proto"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC protocol definitions for CI runner agents"

[dependencies]
prost = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
