[package]
name = "kuiper-proxmox-api"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox VE API client library"

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
tokio = { workspace = true }

[dev-dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
