[package]
name = "proxmox-agent"
version = "0.1.0"
edition = "2021"
description = "Proxmox VE agent for CI runner coordination (Windows/Linux)"

[[bin]]
name = "proxmox-agent"
path = "src/main.rs"

[dependencies]
agent-proto = { path = "../agent-proto" }
agent-lib = { path = "../agent-lib" }
proxmox-api = { path = "../proxmox-api" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
toml = "0.8"
russh = "0.48"
russh-keys = "0.48"
gethostname = "0.5"
