[package]
name = "proxmox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.44"
tracing = { workspace = true }

[dev-dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
