[package]
name = "tart-control"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "5.0.1"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
